--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1>Subnautica Guesser</h1>
 
-<img id="scene" src="images/test.jpg" width="600">
+<img id="scene" src="images/test.png" width="600">
 
 <div id="layers">
   <button data-layer="surface">Surface</button>
@@ -19,6 +19,7 @@
 
 <canvas id="map" width="500" height="500"></canvas>
 
-<script src="main.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
+
