--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1>Subnautica Guesser</h1>
 
-<img id="scene" src="images/test.png" width="600">
+<img id="scene" src="images/test.png" width="600"><!-- Screenshot -->
 
 <div id="layers">
   <button data-layer="surface">Surface</button>
@@ -22,4 +22,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
