--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
   <button data-layer="lost_river">Lost River</button>
 </div>
 
-<canvas id="map" width="500" height="500"></canvas>
+<img id="map" src="maps/base_map.png"width="500" height="500"></img>
 
 <script src="script.js"></script>
 </body>
 </html>
-
 
