--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Subnautica Guesser</title>
+  <title>Subguessr</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Subnautica Guesser</h1>
+<h1>Subguessr</h1>
 
 <img id="scene" src="images/test.png" width="600"><!-- Screenshot -->
 
@@ -15,9 +15,13 @@
   <button data-layer="surface">Surface</button>
   <button data-layer="jellyshroom">Jellyshroom</button>
   <button data-layer="lost_river">Lost River</button>
+   <button data-layer="lava_zone">Inactive Lava Zone</button>
+  <button data-layer="lava_lakes">Lava Lakes</button>
+ 
 </div>
 
 <img id="map" src="maps/base_map.png"width="500" height="500"></img>
+<button id="lockin">LOCK IN ANSWER</button>
 
 <script src="script.js"></script>
 </body>
