minor fixes, renamed the maps to be consistent

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
 </div>
 
-<img id="map" src="maps/base_map.png"width="500" height="500"></img>
+<img id="map" src="maps/surface.png"width="500" height="500"></img>
 <button id="lockin">LOCK IN ANSWER</button>
 
 <script src="script.js"></script>
