added start screen

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <!-- Start Screen-->
 <div id="startScreen">
     <h1>Subnautica GeoGuessr</h1>
-    <p>Guess the location based on the map layer.</p>
+    <p>Guess the location based on the screenshot.</p>
     <button id="startBtn">Start Game</button>
 </div>
 
 
 <!-- Game UI-->
-<div id="gameui">
+<div id="gameui" class="hidden">
     <h1>Subguessr</h1>
     <div id="topBar">
       <span id="roundTxt">Round: 1</span>
