--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="startScreen">
     <h1>Subnautica GeoGuessr</h1>
     <p>Guess the location based on the screenshot.</p>
-    <button id="startBtn">Start Game</button>
+    <button id="startbtn">Start Game</button>
 </div>
 
 
@@ -18,8 +18,8 @@
 <div id="gameui" class="hidden">
     <h1>Subguessr</h1>
     <div id="topBar">
-      <span id="roundTxt">Round: 1</span>
-      <span id="scoreTxt">Score: 0</span>
+      <h2 id="roundTxt">Round: 1</h2>
+      <h2 id="scoreTxt">Score: 0</h2>
     </div>
    
 
