--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
    
   <button id="lockin">LOCK IN ANSWER</button>
   <div id="topBar">
-      <h2 id="roundTxt">Round: 1</h2>
-      <h2 id="scoreTxt">Score: 0</h2>
+      <h2 id="roundtxt">Round: 1</h2>
+      <h2 id="scoretxt">Score: 0</h2>
     </div>
 
 </div>
