added end screen

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- Game UI-->
 <div id="gameui" class="hidden">
     <h1>Subguessr</h1>
+    <h1 id="finishscore" class="hidden"> F</h1>
     
    
 
@@ -40,6 +41,7 @@
     </div>
 
 </div>
+<button id="finish" class="hidden">Finish</button>
 
 <script src="script.js"></script>
 </body>
