made it so that the finish screen actaully works

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <p>Guess the location based on the screenshot.</p>
     <button id="startbtn">Start Game</button>
 </div>
-
+<h1 id="finishscore" class="hidden">SUBNAUTICA 2 WHEN</h1>
 
 <!-- Game UI-->
 <div id="gameui" class="hidden">
     <h1>Subguessr</h1>
-    <h1 id="finishscore" class="hidden"> F</h1>
     
    
 
