--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
  
     </div>
 
-  <img id="map" src="maps/surface.png"width="500" height="500"></img>
+  <div id="mapWrapper">
+  <img id="map" src="maps/surface.png" width="500" height="500">
+</div>
+
    
   <button id="lockin">LOCK IN ANSWER</button>
   <div id="topBar">
